--- a/www/css/main.css
+++ b/www/css/main.css
@@ -104,11 +104,11 @@ html{-webkit-tap-highlight-color: rgba(0,0,0,0);-webkit-user-select: none;-webki
 #floatForm textarea{ float:left; width:100%;}
 #floatForm select, #floatForm option{ width:100%;}
 
-@-webkit-viewport{width:device-width}
-@-moz-viewport{width:device-width}
-@-ms-viewport{width:device-width}
-@-o-viewport{width:device-width}
-@viewport{width:device-width}
+/*@-webkit-viewport{width:device-width}*/
+/*@-moz-viewport{width:device-width}*/
+/*@-ms-viewport{width:device-width}*/
+/*@-o-viewport{width:device-width}*/
+/*@viewport{width:device-width}*/
 
 
 
