New question set added with image questions

--- a/www/css/normalize.css
+++ b/www/css/normalize.css
@@ -1,4 +1,4 @@
-article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary {
+article,aside,details,figcaption,figure,footer,header,main,nav,section,summary {
 display:block;
 }
 
