--- a/www/css/main.css
+++ b/www/css/main.css
@@ -70,7 +70,8 @@ resize:vertical;
     font-style: normal;
 }
 
-html{-webkit-tap-highlight-color: rgba(0,0,0,0);-webkit-user-select: none;-webkit-touch-callout:none; background: #000000;}
+/*html{-webkit-tap-highlight-color: rgba(0,0,0,0);-webkit-user-select: none;-webkit-touch-callout:none; background: #000000;}*/
+html{-webkit-tap-highlight-color: rgba(0,0,0,0);-webkit-user-select: none;-webkit-touch-callout:none; background-image: url("frame1.png");background-size:cover}
 
 /*-- Percent Loader -- */
 #mainLoader{position:absolute;z-index:5; display:none; font-size:50px; line-height:50px; color:#FFF; text-align:center; width:100%; font-family:'bariol_regularregular';}
